Update profile page layout with improved spacing and education details

--- a/html/profile.html
+++ b/html/profile.html
@@ -15,7 +15,8 @@
             <h4 class = "detail">www.github.com/phuc394</h4>
 
             <h2 class = "title">Education</h2>
-            <h3 class = "info">2023 - 2027 Hoa Sen University</h3>
+            <h3 class = "info">2023 - 2027</h3>
+            <h3 class = "info">Hoa Sen University</h3>
             <ul class ="info-list">
                 <li class = "detail">Bachelor of Information Technology</li>
                 <li class = "detail">GPA 3.0/4.0</li>
